--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,13 @@
   "manifest_version": 2,
   "name": "WebMonetization",
   "version": "1.0",
-  "permissions": ["monetization"],
+  "permissions": ["monetization", "storage"],
   "background": {
-    "scripts": ["background.js"]
-  }
+    "page": "background.html"
+  },
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true
+  },
+  "content_security_policy": "script-src 'self' https://jspm.dev https://unpkg.com/setimmediate@1.0.5/setImmediate.js 'unsafe-eval'; object-src 'self'"
 }
