rename extension to show it's a Demo

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "WebMonetization",
+  "name": "WebMonetizationDemo",
   "version": "1.0",
   "permissions": ["monetization", "storage"],
   "background": {
