--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,5 @@
     "page": "options.html",
     "browser_style": true
   },
-  "content_security_policy": "script-src 'self' https://jspm.dev https://unpkg.com/setimmediate@1.0.5/setImmediate.js 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://jspm.dev https://unpkg.com/setimmediate@1.0.5/setImmediate.js; object-src 'self'"
 }
